# metadata-gathering

./: .envrc  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
client/: client.py
server/: app.py  requirements.txt
tests/: test_app.py
